# vibe-coding-template

./: .env.example  .gitignore  AuthSetup.md  FutureImprovements.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  first-time.sh
backend/: Dockerfile  Dockerfile.dev  Makefile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/endpoints/: auth.py  llm.py  vectordb.py
backend/app/core/: config.py
backend/app/models/: auth.py  llm.py  vectordb.py
backend/app/services/llm/: embedding_service.py  llm_service.py
backend/app/services/supabase/: auth.py  database.py  storage.py
backend/app/services/vectordb/: __init__.py  qdrant_service.py
frontend/: Dockerfile  Dockerfile.dev  Makefile  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/health/: route.ts
frontend/app/auth/callback/: page.tsx  route.ts
frontend/app/auth/reset-password/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/auth/: LoginForm.tsx
frontend/components/llm/: TextGenerator.tsx
frontend/services/: llm.ts  supabase.ts
llm-context/: BACKEND-CONTEXT.md  DB-MIGRATIONS.md  FRONTEND-CONTEXT.md  QDRANT-CLIENT-SDK.md  SUPABASE-CLIENT-SDK.md
supabase/: seed.sql
supabase/migrations/: 20240327000000_initial_schema.sql
