[project]
name = "vibe-coding-backend"
version = "0.1.0"
description = "Backend for Vibe Coding application"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn>=0.34.0,<0.35.0",
    "supabase==2.9.0",
    "openai==1.68.2",
    "anthropic>=0.18.0,<0.19.0",
    "pydantic>=2.6.0,<2.7.0",
    "pydantic-settings>=2.1.0,<2.2.0",
    "python-multipart==0.0.9",
    "numpy>=1.26.0,<1.27.0",
    "email-validator>=2.1.0,<2.2.0",
    "qdrant-client>=1.5.0,<1.6.0",
    "httpx>=0.26.0,<0.27.0",
]
